--- a/src/ui/ui.css
+++ b/src/ui/ui.css
@@ -1,12 +1,14 @@
-.field:focus {
+.editable-field:focus {
   border: 1;
   box-shadow: 1;
 }
 
-.field {
-  padding: inherit;
+.editable-field {
   font-size: inherit;
   font-weight: inherit;
   border: none;
   box-shadow: none;
+  width: fit-content;
+  background-color: inherit;
+  height: inherit;
 }
